--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -9,20 +9,23 @@ on:
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
-    
+    env:
+      DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+      DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
-    
+
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
-    
+
     - name: Log in to Docker Hub
       uses: docker/login-action@v2
       with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
-    
+        username: ${{ env.DOCKER_USERNAME }}
+        password: ${{ env.DOCKER_PASSWORD }}
+
     - name: Build and push Docker image
       uses: docker/build-push-action@v4
       with:
@@ -30,44 +33,44 @@ jobs:
         file: ./Dockerfile
         push: true
         tags: |
-          ${{ secrets.DOCKER_USERNAME }}/ml-models:latest
-          ${{ secrets.DOCKER_USERNAME }}/ml-models:${{ github.sha }}
-    
+          ${{ env.DOCKER_USERNAME }}/ml-models:latest
+          ${{ env.DOCKER_USERNAME }}/ml-models:${{ github.sha }}
+
     - name: Verify Docker image
-      run: docker pull ${{ secrets.DOCKER_USERNAME }}/ml-models:latest
+      run: docker pull ${{ env.DOCKER_USERNAME }}/ml-models:latest
 
   test:
     needs: build-and-push
     runs-on: ubuntu-latest
-    
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
-    
+
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
         python-version: '3.11'
-    
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-    
+
     - name: Run models
       run: |
         echo "Testing Linear Regression model..."
         python linear.py << EOF
         5
         EOF
-        
+
         echo "Testing Logistic Regression model..."
         python logistic.py << EOF
         30
         20
         2
         EOF
-        
+
         echo "Testing Support Vector Machine model..."
         python support_vector.py << EOF
         35
